k8s/02-deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: enspirit
  name: enspirit-website-devel
  labels:
    app: enspirit-website-devel
spec:
  replicas: 1
  selector:
    matchLabels:
    app: enspirit-website-devel
  template:
    metadata:
      labels:
        app: enspirit-website-devel
    spec:
      imagePullSecrets:
      - name: q8s-pull-secret
      containers:
      - image: enspirit/website:1.0-rc1
        name: enspirit-website-devel
        ports:
          - name: http
            containerPort: 80
