k8s/01-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: enspirit-website-devel
  name: enspirit-website-devel
  namespace: enspirit
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: enspirit-website-devel
